# HelloJuliaPythonInterop

./: .envrc  README.md  pyproject.toml
examples/: julia_call_python.jl  python_call_julia.py
