[tool.poetry]
name = "hellopyjulia"
version = "0.1.0"
description = ""
authors = ["lassepe <lasse.peters@mailbox.org>"]

[tool.poetry.dependencies]
python = "~3.7"
julia = "^0.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
